# QuipContractCode

./: .gitignore
libquip/: CMakeLists.txt
libquip/include/: ethereum_client.hpp  quip_wallet.hpp  rlp.hpp  wots_plus.hpp
libquip/src/: ethereum_client.cpp  quip_wallet.cpp  rlp.cpp  wots_plus.cpp
libquip/tests/: CMakeLists.txt  mock_ethereum_client.hpp  test_quip_wallet.cpp
